--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "~8.0.3",
         "@angular/router": "~8.0.3",
         "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+        "animate.css": "^3.7.2",
         "bootstrap": "^4.3.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.4.1",
